Chaged to Optional and edited test to work with optionals.